[gd_scene load_steps=4 format=3 uid="uid://duug21557oo01"]

[ext_resource type="Script" path="res://intro_menu.gd" id="1_ft6qf"]
[ext_resource type="PackedScene" uid="uid://fj76k2ap1q30" path="res://weapon_display.tscn" id="1_o87b0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0rawa"]
bg_color = Color(0.0117647, 0.0235294, 0.0941176, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[node name="intro_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ft6qf")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
offset_left = 431.0
offset_top = 213.0
offset_right = 1489.0
offset_bottom = 867.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0rawa")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
offset_right = 1058.0
offset_bottom = 654.0
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
offset_left = 60.0
offset_top = 60.0
offset_right = 998.0
offset_bottom = 594.0

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_right = 938.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 48
text = "Starting Equipment"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 74.0
offset_right = 938.0
offset_bottom = 128.0
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 20

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
offset_top = 30.0
offset_right = 938.0
offset_bottom = 34.0

[node name="Label2" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 132.0
offset_right = 938.0
offset_bottom = 169.0
theme_override_font_sizes/font_size = 24
text = "Hover over upgrades for details"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 173.0
offset_right = 938.0
offset_bottom = 469.0
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HSplitContainer" type="HSplitContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
offset_top = 20.0
offset_right = 938.0
offset_bottom = 276.0

[node name="weapon_display" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HSplitContainer" instance=ExtResource("1_o87b0")]
layout_mode = 2
offset_right = 463.0
offset_bottom = 256.0
CLICKABLE = false

[node name="weapon_display2" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HSplitContainer" instance=ExtResource("1_o87b0")]
layout_mode = 2
offset_left = 475.0
offset_right = 938.0
offset_bottom = 256.0
CLICKABLE = false

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 473.0
offset_right = 938.0
offset_bottom = 534.0

[node name="Button" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2i(147, 45)
layout_mode = 2
offset_left = 791.0
offset_right = 938.0
offset_bottom = 61.0
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 38
text = "Start"

[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/Button" to="." method="_on_button_pressed"]
